Square + burn out of bound error fix

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,4 +1,4 @@
-.grid-table { border-collapse: collapse; margin: 0 auto; }
+.grid-table { border-collapse: collapse; margin: 0 auto;}
 .grid-table td { padding: 0; }
 
 .field {
@@ -56,4 +56,24 @@
 .cold   {
   transform: scale(1.05);
   box-shadow: 0 0 20px rgba(131, 129, 125, 0.6);
+}
+
+.table-container {
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+td {
+  padding: 0;
+  border: 1px solid black;
+}
+
+.carre {
+  width: 50px;
+  height: 50px;   
 }
